# kubimo

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.marimo  README.md  cog.toml  docker-bake.ci.hcl  docker-bake.dev.hcl  docker-bake.hcl  docker-bake.mac.hcl  index.yaml  setup-minikube.sh
.github/workflows/: cd.yaml  ci.yaml
api/: Cargo.toml
api/examples/: apply_crds.rs  edit.rs  print_crds.rs  run.rs  runner.rs  viewer.rs  workspace.rs
api/src/: api.rs  client.rs  crd.rs  error.rs  factory.rs  filter_params.rs  label.rs  lib.rs  list_stream.rs  meta.rs  quantity.rs  selector.rs
api/src/validation/: budget_selector_not_empty.cel  log_level.cel  mod.rs  runner_immutable_fields.cel  runner_max_cpu_greater_than_min.cel  runner_max_memory_greater_than_min.cel  runner_run_has_notebook.cel  runner_workspace_immutable.cel  workspace_auto_scale_bounds.cel  workspace_max_storage_greater_than_min.cel  workspace_no_volume_with_name.cel
api/tests/: integration.rs
charts/: .gitignore  Chart.yaml
charts/kubimo-controller/: Chart.yaml  values.yaml
charts/kubimo-controller/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
charts/templates/: NOTES.txt  deployment.yaml
controller/: Cargo.toml
controller/src/: backoff.rs  command.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  reconciler.rs  resources.rs  service.rs  status.rs  tracing.rs  utils.rs
controller/src/controllers/: indexer.rs  ingress.rs  mod.rs  runner.rs  workspace.rs  workspace_affinity.rs
controller/src/controllers/budget/: mod.rs
controller/src/controllers/cache_job/: apply_job.rs  apply_owner_reference.rs  mod.rs
controller/src/controllers/exporter/: apply_job.rs  apply_owner_reference.rs  mod.rs
controller/src/controllers/runner/: apply_ingress.rs  apply_owner_reference.rs  apply_pod.rs  apply_service.rs  mod.rs
controller/src/controllers/runner_status/: apply_conditions.rs  conditions.rs  mod.rs
controller/src/controllers/workspace/: apply_indexer.rs  apply_indexer_rbac.rs  apply_job.rs  apply_pvc.rs  apply_secret.rs  apply_status.rs  cleanup_indexer.rs  mod.rs
controller/src/controllers/workspace_directory/: apply_owner_reference.rs  mod.rs
docker/: Dockerfile.controller  Dockerfile.marimo  docker-bake.hcl  gitea-values.yaml
docker/app/: .gitignore  cache.py  marimo_autoswitch.js  script.js  server.py  test_cache.py
docker/setup/: gitignore  init.sh  launch.py  marimo.toml  pyproject.toml  start.sh
example/: Cargo.toml
example/src/: context.rs  lib.rs  main.rs  run.rs  utils.rs
example/src/exporter/: create.rs  mod.rs
example/src/runner/: create.rs  mod.rs
example/src/workspace/: create.rs  mod.rs  purge.rs
examples/: basic.yaml
indexer/: Cargo.toml
indexer/src/: disk.rs  keys.rs  main.rs  python.rs  s3.rs  upload.rs  watcher.rs
json-patch-macros/: Cargo.toml
json-patch-macros/src/: lib.rs
k8s-crd-snapshot-storage/: Cargo.toml  generate.sh
k8s-crd-snapshot-storage/src/: lib.rs  volumesnapshotclasses.rs  volumesnapshotcontents.rs  volumesnapshots.rs
notebook_meta/: Cargo.toml
notebook_meta/src/: lib.rs
packer/: Cargo.toml
packer/src/: lib.rs  main.rs  test.rs
packer/src/commands/: mod.rs  pack.rs  unpack.rs
s3-tar/: Cargo.toml
s3-tar/src/: context.rs  download.rs  lib.rs  main.rs  multipart.rs  run.rs  s3_url.rs  upload.rs
s3-tar/src/download/: mod.rs
s3-tar/src/upload/: mod.rs
s3-tar/test/example/directory/: with_symlink.txt
scripts/: bump_version.py  clean-minikube.sh  create-gitea-repo.sh  setup-minikube-dev  setup-minikube-dev.sh  setup-minikube-minio  setup-minikube.sh
server/: Cargo.toml
server/src/: config.rs  crd.rs  id.rs  kube_http.rs  lib.rs  main.rs  service.rs  tracing.rs
server/src/controller/: context.rs  mod.rs  workspace.rs
server/src/graphql/: mod.rs
server/src/graphql/mutation/: mod.rs  workspace.rs
server/src/graphql/query/: mod.rs  node.rs  workspace.rs
server/src/graphql/subscription/: mod.rs
