[package]
name = "kubimo"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
hyper-util = "0.1"
k8s-openapi = { version = "0.25", features = ["latest", "schemars"] }
kube = { version = "1.1", features = ["runtime", "derive"] }
lazy_static = "1.5"
names = { version = "0.14", default-features = false }
rand = "0.9"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.47", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
cel-interpreter = "0.10.0"
