[package]
name = "kubimo"
version = { workspace = true }
edition = "2024"

[features]
default = ["client", "runtime"]
client = [
  "kube/client",
  "kube/ring",
  "kube/rustls-tls",
  "kube/jsonpatch",
  "json-patch",
  "futures",
  "hyper-util",
  "serde_json",
  "tower",
  "tower-http",
  "tracing",
]
runtime = ["kube/runtime"]

[dependencies]
json-patch-macros = { path = "../json-patch-macros" }

futures = { version = "0.3", optional = true }
hyper-util = { version = "0.1", optional = true, default-features = false, features = [
  "tokio",
] }
json-patch = { version = "4.0", default-features = false, optional = true }
k8s-openapi = { version = "0.26", features = ["latest", "schemars"] }
kube = { version = "2.0", default-features = false, features = ["derive"] }
schemars = { version = "1.0", features = ["derive", "url2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
cel-interpreter = "0.10.0"
tokio = { version = "1.47", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
] }
