[package]
name = "kubimo-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
kubimo = { path = "../api" }

async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.47", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15.13"
serde = { version = "1.0", features = ["derive"] }
