[package]
name = "kubimo-controller"
version = { workspace = true }
license = { workspace = true }
edition = "2024"

[dependencies]
kubimo = { path = "../api" }

async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.47", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
json-patch = { version = "4.0", default-features = false }
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = [
  "charset",
  "http2",
  "rustls-tls",
  "json",
] }
url = "2.5"
chrono = "0.4.42"
