[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
kubimo = { path = "../api" }

futures = "0.3"
tokio = { version = "1.47", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
  "process",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.3", features = ["derive"] }
git-url-parse = "0.4"
url = "2.5"
indicatif = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
backon = "1.5"
