[package]
name = "indexer"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
kubimo = { path = "../api", default-features = false, features = ["client"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.47", features = [
  "rt",
  "rt-multi-thread",
  "fs",
  "macros",
] }
ignore = "0.4"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
object_store = { version = "0.13", features = ["aws"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = { version = "0.3", default-features = false }
crc = "3.4.0"
rand = "0.9"
base64 = "0.22"
base32 = "0.5.1"
tree-sitter = "0.26.3"
tree-sitter-python = "0.25.0"
