[package]
name = "indexer"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
kubimo = { path = "../api", default-features = false, features = ["client"] }
notebook_meta = { path = "../notebook_meta" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.47", features = [
  "rt",
  "rt-multi-thread",
  "fs",
  "macros",
  "process",
  "signal",
] }
ignore = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2.0"
object_store = { version = "0.13", features = ["aws"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = { version = "0.3", default-features = false }
rand = "0.9"
base32 = "0.5"
tree-sitter = "0.26"
tree-sitter-python = "0.25"
lazy_static = "1.5"
serde_json = "1.0"
bytes = "1.11"
notify = "8.2"
crc32fast = "1.5"
