[package]
name = "packer"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
ignore = { version = "0.4", features = ["simd-accel"] }
clap = { version = "4.5", features = ["derive"] }
tar = "0.4"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros"] }
flate2 = "1.1"
thiserror = "2.0"
object_store = { version = "0.12.3", features = ["aws"] }

[dev-dependencies]
tempfile = "3.20"
