[package]
name = "s3-tar"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
futures = "0.3"
tokio = { version = "1.47", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
  "process",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.3", features = ["derive", "env"] }
object_store = { version = "0.12", features = ["aws"] }
ignore = { version = "0.4", features = ["simd-accel"] }
tar = "0.4"
flate2 = "1.1"
bytes = "1.10"
tokio-util = { version = "0.7", features = ["io-util", "io"] }
thiserror = "2.0"
url = "2.5"
