[package]
name = "kubimo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7.0", default-features = false, features = [
  "tracing",
  "graphiql",
] }
async-graphql-axum = { version = "7.0" }
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "tokio",
  "tracing",
] }
config = { version = "0.15", default-features = false, features = [
  "async",
  "convert-case",
] }
futures = "0.3"
http-body = "1.0"
hyper-rustls = { version = "0.27", default-features = false }
hyper-util = "0.1"
k8s-openapi = { version = "0.25", features = ["latest", "schemars"] }
kube = { version = "1.1", features = ["runtime", "derive"] }
lazy_static = "1.5"
names = { version = "0.14", default-features = false }
rand = "0.9"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
