[project]
name = "workspace"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = ["marimo[recommended,lsp]>=0.23.3"]

[dependency-groups]
dev = [
  "ruff",
  "ty",
  "watchdog",
  "nbconvert",
  "google-genai",
  "anthropic",
  "openai",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
